--- a/index.html
+++ b/index.html
@@ -1047,9 +1047,9 @@
             <img
                     id="sidebarLogo"
                     class="portal-logo"
-                    src="/media/Nulane_Systems-removebg-preview-inv.png"
-                    data-light-src="/media/Nulane_Systems-removebg-preview-inv.png"
-                    data-dark-src="/media/Nulane_Systems-removebg-preview-inv.png"
+                    src="https://nulanesystems.com/media/Nulane_Systems-removebg-preview-inv.png"
+                    data-light-src="https://nulanesystems.com/media/Nulane_Systems-removebg-preview-inv.png"
+                    data-dark-src="https://nulanesystems.com/media/Nulane_Systems-removebg-preview-inv.png"
                     alt="Nulane Logo"
             />
         </div>
@@ -1101,7 +1101,7 @@
                 <div class="nav-section-heading">Apps</div>
                 <a href="#" class="nav-link" data-page="docudent">
                     <span class="nav-link-logo" aria-hidden="true">
-                        <img src="/media/Docudent.png" alt="DocuDent logo" loading="lazy">
+                        <img src="https://nulanesystems.com/media/Docudent.png" alt="DocuDent logo" loading="lazy">
                     </span>
                     <span class="nav-link-label">DocuDent</span>
                 </a>
@@ -1167,9 +1167,9 @@
             <div class="sidebar-footer">
                 <div class="powered-by-nulane-wrapper sidebar-powered">
                     <img
-                        src="/media/powered_by_inv.png"
-                        alt="Powered by Nulane"
-                        loading="lazy"
+                            src="https://nulanesystems.com/media/powered_by_inv.png"
+                            alt="Powered by Nulane"
+                            loading="lazy"
                     />
                 </div>
                 <a href="#" id="logout" class="nav-link logout-link">
@@ -2176,9 +2176,11 @@
     const INTER_RAIL_ALLOWED_ORG = "inter-rail.inc";
     const ACME_ALLOWED_ORG = "acme.inc";
     const ACME_ALLOWED_ORG_ID = "baa50da7-b31d-440c-804c-034849c33dea";
-    const PORTAL_LOGO_DEFAULT_PATH = "/media/Nulane_Systems-removebg-preview-inv.png";
-    const PORTAL_LOGO_AWCT_PATH = "/media/AWCT.png";
-    const PORTAL_LOGO_IRT_PATH = "/media/IRT-Navigation-LOGO.png";
+    const PORTAL_LOGO_DEFAULT_PATH =
+      "https://nulanesystems.com/media/Nulane_Systems-removebg-preview-inv.png";
+    const PORTAL_LOGO_AWCT_PATH = "https://nulanesystems.com/media/AWCT.png";
+    const PORTAL_LOGO_IRT_PATH =
+      "https://nulanesystems.com/media/IRT-Navigation-LOGO.png";
     const CUSTOM_ORG_LOGOS = {
       [AWCT_ALLOWED_ORG]: PORTAL_LOGO_AWCT_PATH,
       [INTER_RAIL_ALLOWED_ORG]: PORTAL_LOGO_IRT_PATH,
